# backend

./: .coverage  .dockerignore  .env  .gitignore  Dockerfile  README.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_data.txt
.github/workflows/: cicd.yml
app/: main.py
app/api/: ping.py  users.py
app/infra/: ldap_client.py
app/services/: ad_users.py
deploy/: .env.tmpl  docker-compose.prod.yml
docker/: entrypoint.sh
src/: main.py
src/api/: auth.py  dependencies.py  ping.py  teams.py  update.py  users.py
src/application/: dto.py
src/application/services/: __init__.py  ad_import.py  avatar.py  user.py
src/config/: settings.py
src/domain/models/: __init__.py  avatar.py  employee.py  position.py  status.py  status_history.py  team.py  user.py
src/domain/utils/: user.py
src/infrastructure/: ldap_client.py
src/infrastructure/db/: base.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: 2025_10_22_2218-394218859d8a_init_schema.py  (+14 more)
src/infrastructure/db/models/: __init__.py  avatar.py  base.py  employee.py  empoyee.py  position.py  status_history.py  team.py  user.py
src/infrastructure/repositories/: __init__.py  avatar.py  employee.py  position.py  team.py  user.py
src/res/: init-db.sql  test_users.csv
src/services/: employee.py  ping_service.py
src/utils/: user.py
tests/: conftest.py  factories.py  fixtures.py  test_ad_import.py  test_api.py  test_auth.py  test_auth_registration.py  test_dto.py  test_init_data.py  test_ldap_client.py  test_other_services.py  test_repositories.py  test_settings.py  test_user_service.py  test_utils.py
