[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.17.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "fastapi~=0.118.2",
    "ldap3>=2.10.2rc3,<2.11",
    "passlib>=1.7.4",
    "pillow>=10.4.0",
    "pydantic~=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.44",
    "uuid>=1.30",
    "uuid6>=2025.0.1",
    "uvicorn~=0.37.0",
]
